@@ -78,40 +78,40 @@ class MenuItemEditPage extends AdminEditPage
 			);
 
 	public $menuItemTypes = array(
-		array('group' => 'Contacts', 'type' => 'List All Contact Categories '),
-		array('group' => 'Contacts', 'type' => 'List Contacts in a Category '),
-		array('group' => 'Contacts', 'type' => 'Single Contact '),
-		array('group' => 'Contacts', 'type' => 'Featured Contacts '),
-		array('group' => 'Articles', 'type' => 'Archived Articles '),
-		array('group' => 'Articles', 'type' => 'Single Article '),
-		array('group' => 'Articles', 'type' => 'List All Categories '),
-		array('group' => 'Articles', 'type' => 'Category Blog '),
-		array('group' => 'Articles', 'type' => 'Category List '),
-		array('group' => 'Articles', 'type' => 'Featured Articles '),
-		array('group' => 'Articles', 'type' => 'Create Article '),
-		array('group' => 'Smart Search', 'type' => 'Search '),
-		array('group' => 'Newsfeeds', 'type' => 'List All News Feed Categories '),
-		array('group' => 'Newsfeeds', 'type' => 'List News Feeds in a Category '),
-		array('group' => 'Newsfeeds', 'type' => 'Single News Feed '),
-		array('group' => 'Search', 'type' => 'Search Form or Search Results '),
-		array('group' => 'Tags', 'type' => 'Tagged Items '),
-		array('group' => 'Tags', 'type' => 'Compact list of tagged items '),
-		array('group' => 'Tags', 'type' => 'List of all tags '),
-		array('group' => 'Users Manager', 'type' => 'Login Form '),
-		array('group' => 'Users Manager', 'type' => 'User Profile '),
-		array('group' => 'Users Manager', 'type' => 'Edit User Profile '),
-		array('group' => 'Users Manager', 'type' => 'Registration Form '),
-		array('group' => 'Users Manager', 'type' => 'Username Reminder Request '),
-		array('group' => 'Users Manager', 'type' => 'Password Reset '),
-		array('group' => 'Weblinks', 'type' => 'List All Web Link Categories '),
-		array('group' => 'Weblinks', 'type' => 'List Web Links in a Category '),
-		array('group' => 'Weblinks', 'type' => 'Submit a Web Link '),
-		array('group' => 'Wrapper', 'type' => 'Iframe Wrapper '),
-		array('group' => 'System Links', 'type' => 'External URL '),
-		array('group' => 'System Links', 'type' => 'Menu Item Alias '),
-		array('group' => 'System Links', 'type' => 'Text Separator '),
+		array('group' => 'Articles', 'type' => 'Archived Articles ' ),
+		array('group' => 'Articles', 'type' => 'Category Blog ' ),
+		array('group' => 'Articles', 'type' => 'Category List ' ),
+		array('group' => 'Articles', 'type' => 'Create Article ' ),
+		array('group' => 'Articles', 'type' => 'Featured Articles ' ),
+		array('group' => 'Articles', 'type' => 'List All Categories ' ),
+		array('group' => 'Articles', 'type' => 'Single Article ' ),
+		array('group' => 'Contacts', 'type' => 'Featured Contacts ' ),
+		array('group' => 'Contacts', 'type' => 'List All Contact Categories ' ),
+		array('group' => 'Contacts', 'type' => 'List Contacts in a Category ' ),
+		array('group' => 'Contacts', 'type' => 'Single Contact ' ),
+		array('group' => 'Newsfeeds', 'type' => 'List All News Feed Categories ' ),
+		array('group' => 'Newsfeeds', 'type' => 'List News Feeds in a Category ' ),
+		array('group' => 'Newsfeeds', 'type' => 'Single News Feed ' ),
+		array('group' => 'Search', 'type' => 'Search Form or Search Results ' ),
+		array('group' => 'Smart Search', 'type' => 'Search ' ),
+		array('group' => 'System Links', 'type' => 'External URL ' ),
 		array('group' => 'System Links', 'type' => 'Menu Heading ' ),
-		);
+		array('group' => 'System Links', 'type' => 'Menu Item Alias ' ),
+		array('group' => 'System Links', 'type' => 'Text Separator ' ),
+		array('group' => 'Tags', 'type' => 'Compact list of tagged items ' ),
+		array('group' => 'Tags', 'type' => 'List of all tags ' ),
+		array('group' => 'Tags', 'type' => 'Tagged Items ' ),
+		array('group' => 'Users Manager', 'type' => 'Edit User Profile ' ),
+		array('group' => 'Users Manager', 'type' => 'Login Form ' ),
+		array('group' => 'Users Manager', 'type' => 'Password Reset ' ),
+		array('group' => 'Users Manager', 'type' => 'Registration Form ' ),
+		array('group' => 'Users Manager', 'type' => 'User Profile ' ),
+		array('group' => 'Users Manager', 'type' => 'Username Reminder Request ' ),
+		array('group' => 'Weblinks', 'type' => 'List All Web Link Categories ' ),
+		array('group' => 'Weblinks', 'type' => 'List Web Links in a Category ' ),
+		array('group' => 'Weblinks', 'type' => 'Submit a Web Link ' ),
+		array('group' => 'Wrapper', 'type' => 'Iframe Wrapper ' ),
+	);
 
 
 	public function getFieldValue($label)
